# rdk-xr-speech-vrex

./: .gitignore  CONTRIBUTING.md  configure.ac
src/: Makefile.am  xrsv.c  xrsv.h  xrsv_utils.c  xrsv_utils.h
src/xrsv_http/: xrsv_http.c  xrsv_http.h
src/xrsv_ws/: xrsv_ws.c  xrsv_ws.h  xrsv_ws_action.hash  xrsv_ws_action_phone.hash  xrsv_ws_private.h  xrsv_ws_request.hash
src/xrsv_ws_nextgen/: xrsv_ws_nextgen.c  xrsv_ws_nextgen.h  xrsv_ws_nextgen_msgtype.hash  xrsv_ws_nextgen_private.h  xrsv_ws_nextgen_tv_control.hash
